FIX: wrong font #24

--- a/web/public/Packages/Sites/schule.signalwerkCh/Resources/Private/Styles/signalwerk/components/html.scss
+++ b/web/public/Packages/Sites/schule.signalwerkCh/Resources/Private/Styles/signalwerk/components/html.scss
@@ -26,7 +26,7 @@ a {
 }
 
 b, strong, span.strong {
-  @include font-bold(sans);
+  @include font-bold(sansblack);
 }
 
 ul {
